--- a/index.html
+++ b/index.html
@@ -19,16 +19,52 @@
  
 var namMember = new Array(
  
-"option 1",
- 
-"option 2",
- 
-"option 3",
-
-"option 4",
-
-"option 5"
- 
+"Rocketeer",
+"Brighter",
+"Cardio",
+"KILLING PART",
+"RUNWAY (INI Ver.)",
+"ONE (INI Ver.)",
+"Brighter (Acoustic Ver.)",
+"INI WORKSPACE-Dance #1",
+"How are you",
+"CALL 119",
+"We Are",
+"BOMBARDA",
+"DILEMMA",
+"AMAZE ME",
+"Polaroid",
+"Yummy!!",
+"Password",
+"STRIDE",
+"Shooting Star",
+"Mirror",
+"POPPIA (JAPAN version)",
+"HERO",
+"SPECTRA",
+"Dramatic",
+"BAD BOYZ"
+"Do What You Like",
+"Runaway",
+"Let Me Fly 〜その未来へ〜 (INI ver.)
+"New Day",
+"FANFARE",
+"Let's Escape",
+"INItialize",
+"DROP",
+"My Story",
+"Moment",
+"Busterz",
+"HANA_花",
+"TAG",
+"10 THINGS",
+"YOU IN",
+"LEGIT",
+"MORE",
+"T-Shirt",
+"Dirty Shoes Swag",
+"TELEVISION",
+"Ferris Wheel"
  
 );
  
@@ -615,7 +651,7 @@ font-family: 'Times New Roman', erif;
  
 <p class="instructions">
 <center><br /><br />
-<b>SORTER NAME</b><br /><br>pick who you like better in each battle to get an accurate list of your<br />favorite members from the group.<br />note: hitting 'no opinion' or 'I like both' frequently will negatively affect your results.<br /><br /></center>
+<b>INI Song Sorter</b><br /><br>pick which song you like better in each battle to get an accurate list of your<br />favorite songs from the group.<br />note: hitting 'no opinion' or 'I like both' frequently will negatively affect your results.<br /><br /></center>
  
  
  
