--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ var namMember = new Array(
 "BAD BOYZ"
 "Do What You Like",
 "Runaway",
-"Let Me Fly 〜その未来へ〜 (INI ver.)
+"Let Me Fly 〜その未来へ〜 (INI ver.)",
 "New Day",
 "FANFARE",
 "Let's Escape",
