--- a/index.html
+++ b/index.html
@@ -25,16 +25,7 @@ var namMember = new Array(
  
 "Cardio",
  
-"KILLING PART",
- 
-"RUNWAY (INI Ver.)",
- 
-"ONE (INI Ver.)",
- 
-"Brighter (Acoustic Ver.)",
-  
-
-
+"KILLING PART"
  
 );
  
