--- a/index.html
+++ b/index.html
@@ -19,15 +19,20 @@
  
 var namMember = new Array(
  
-"Rocketeer",
+"option 1",
  
-"Brighter",
+"option 2",
  
-"Cardio",
+"option 3",
+
+"option 4",
+
+"option 5"
  
-"KILLING PART"
  
 );
+ 
+ 
  
 //*********************************************************
  
@@ -610,7 +615,7 @@ font-family: 'Times New Roman', erif;
  
 <p class="instructions">
 <center><br /><br />
-<b>INI Song Sorter</b><br /><br>pick which song you like better in each battle to get an accurate list of your<br />favorite songs from the group.<br />note: hitting 'no opinion' or 'I like both' frequently will negatively affect your results.<br /><br /></center>
+<b>SORTER NAME</b><br /><br>pick who you like better in each battle to get an accurate list of your<br />favorite members from the group.<br />note: hitting 'no opinion' or 'I like both' frequently will negatively affect your results.<br /><br /></center>
  
  
  
