--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ var namMember = new Array(
 
 "KILLING PART",
 
-"RUNWAY (INI Ver.)",
+"RUNWAY（INI Ver.）",
 
-"ONE (INI Ver.)",
+"ONE（INI Ver.）",
 
-"Brighter (Acoustic Ver.)",
+"Brighter（Acoustic Ver.）",
  
 "INI WORKSPACE-Dance #1",
 
@@ -697,7 +697,7 @@ font-family: 'Times New Roman', erif;
  
 <p class="instructions">
 <center><br /><br />
-<b>SORTER NAME</b><br /><br>pick who you like better in each battle to get an accurate list of your<br />favorite members from the group.<br />note: hitting 'no opinion' or 'I like both' frequently will negatively affect your results.<br /><br /></center>
+<b>INI Song Sorter</b><br /><br>pick which song you like better in each battle to get an accurate list of your<br />favorite songs from the group.<br />note: hitting 'no opinion' or 'I like both' frequently will negatively affect your results.<br /><br /></center>
  
  
  
