--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ var namMember = new Array(
 
 "Brighter（Acoustic Ver.）",
  
-"INI WORKSPACE-Dance #1",
+"INI WORKSPACE-Dance ＃1",
 
 "How are you",
  
