--- a/index.html
+++ b/index.html
@@ -498,9 +498,9 @@ var i;
  
  
  
-str += "<table style=\"width:200px; font-size:18px; line-height:120%; margin-left:auto; margin-right:auto; border:1px solid #000; border-collapse:collapse\" align=\"center\">";
+str += "<table style=\"width:400px; font-size:16px; line-height:120%; margin-left:auto; margin-right:auto; border:1px solid #000; border-collapse:collapse\" align=\"center\">";
  
-str += "<tr><td style=\"color:#ffffff; background-color:#e097d9; text-align:center;\">rank<\/td><td style=\"color:#ffffff; background-color:#e097d9; text-align:center;\">options<\/td><\/tr>";
+str += "<tr><td style=\"color:#ffffff; background-color:#e097d9; text-align:center;\">Rank<\/td><td style=\"color:#ffffff; background-color:#e097d9; text-align:center;\">Songs<\/td><\/tr>";
  
  
  
@@ -697,7 +697,7 @@ font-family: 'Times New Roman', erif;
  
 <p class="instructions">
 <center><br /><br />
-<b>INI Song Sorter</b><br /><br>pick which song you like better in each battle to get an accurate list of your<br />favorite songs from the group.<br />note: hitting 'no opinion' or 'I like both' frequently will negatively affect your results.<br /><br /></center>
+<b>INI Song Sorter</b><br /><br>Pick which song you like better in each battle to get an accurate list <br />of your favorite songs from the group.<br />Note: hitting 'no opinion' or 'I like both' frequently will negatively affect your results.<br /><br /></center>
  
  
  
