--- a/index.html
+++ b/index.html
@@ -109,8 +109,23 @@ var namMember = new Array(
  
 "TELEVISION",
  
-"Ferris Wheel"
- 
+"Ferris Wheel",
+
+"LOUD",
+
+"Walkie Talkie",
+
+ "3D",
+
+ "I'm a Dreamer",
+
+ "WMDA (Where My Drums At)",
+
+ "ONE NIGHT",
+
+ "HI-DE-HO",
+
+ "Drip Drop"
  
 );
  
