--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ var i;
  
  
  
-str += "<table style=\"width:400px; font-size:16px; line-height:120%; margin-left:auto; margin-right:auto; border:1px solid #000; border-collapse:collapse\" align=\"center\">";
+str += "<table style=\"width:400px; font-size:20px; line-height:160%; margin-left:auto; margin-right:auto; border:1px solid #000; border-collapse:collapse\" align=\"center\">";
  
 str += "<tr><td style=\"color:#ffffff; background-color:#e097d9; text-align:center;\">Rank<\/td><td style=\"color:#ffffff; background-color:#e097d9; text-align:center;\">Songs<\/td><\/tr>";
  
@@ -613,7 +613,7 @@ return str;
  
 font-size: 19px;
  
-font-family: 'Times New Roman', serif;
+font-family: verdana, sans-serif;
  
 text-align: center;
  
@@ -687,7 +687,7 @@ width: 600px;
  
 margin: 0 auto;
  
-font-family: 'Times New Roman', erif;
+font-family: verdana, sans-serif;
  
 }
  
@@ -712,10 +712,13 @@ font-family: 'Times New Roman', erif;
  
 <p class="instructions">
 <center><br /><br />
-<b>INI Song Sorter</b><br /><br>Pick which song you like better in each battle to get an accurate list <br />of your favorite songs from the group.<br />Note: hitting 'no opinion' or 'I like both' frequently will negatively affect your results.<br /><br /></center>
+<p style="font-size:30px;font-family:verdana">
+<b>INI Song Sorter</b><br /></p>
+
+<p style="font-size:16px;font-family:courier">
+<br>Pick which song you like better in each battle to get an accurate list of your favorite songs from INI.<br />Note: hitting 'No opinion' or 'I like both' frequently will negatively affect your results.<br /><br /></center>
  
- 
- 
+</p> 
 </p>
  
  
@@ -724,7 +727,7 @@ font-family: 'Times New Roman', erif;
  
 <tbody><tr>
  
-<td id="battleNumber" colspan="3" style="padding-bottom: 10px;" style="text-align:center;"><b>battle #1<br>0% sorted.</b></td>
+<td id="battleNumber" colspan="3" style="padding-bottom: 10px;" style="text-align:center;"><b>Battle #1<br>0% sorted.</b></td>
  
 </tr>
  
@@ -746,7 +749,7 @@ I like both
  
 <td class="middleField" onclick="if(finishFlag==0) sortList(0);"style="text-align:center;">
  
-no opinion
+No opinion
  
 </td>
  
