--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@ return str;
  
 #mainTable{
  
-font-size: 19px;
+font-size: 20px;
  
 font-family: verdana, sans-serif;
  
@@ -633,6 +633,8 @@ border-spacing: 10px 5px;
  
 #leftField{
  
+font-size: 20px;
+ 
 width: 200px;
  
 height: 150px;
@@ -640,10 +642,14 @@ height: 150px;
 border: 1px solid #000;
  
 cursor: pointer;
+
+margin: 10px;
  
 }
  
 #rightField{
+
+font-size: 20px;
  
 width: 200px;
  
@@ -652,12 +658,15 @@ height: 150px;
 border: 1px solid #000;
  
 cursor: pointer;
+
+margin: 10px;
+
  
 }
  
 .middleField{
  
-width: 120px;
+width: 140px;
  
 height: 70px;
  
