--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@ var namMember = new Array(
  
 "Ferris Wheel",
 
+ "Whatever Happens",
+
 "LOUD",
 
 "Walkie Talkie",
@@ -119,13 +121,19 @@ var namMember = new Array(
 
  "I'm a Dreamer",
 
+ "First",
+
+ "Break of Dawn",
+
  "WMDA (Where My Drums At)",
 
  "ONE NIGHT",
 
  "HI-DE-HO",
 
- "Drip Drop"
+ "Drip Drop",
+
+ "Make it Count",
  
 );
  
