--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <link rel="shortcut icon" href="http://sv.tinypic.com?ref=qq68e9">
  
 <html>
- 
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# blog: http://ogp.me/ns/blog#">
- 
+<meta name="og:site_name" content="INI Song Sorter">
 <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
  
 <meta http-equiv="Content-Style-Type" content="text/css">
