--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# blog: http://ogp.me/ns/blog#">
 <meta name="og:site_name" content="INI Song Sorter">
 <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+<title>INI Song Sorter</title>
  
 <meta http-equiv="Content-Style-Type" content="text/css">
  
