--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ nrec = 0;
  
 if (cmp1<0) {
  
-str = "battle #"+(numQuestion-1)+"<br>"+Math.floor(finishSize*100/totalSize)+"% sorted.";
+str = "Battle #"+(numQuestion-1)+"<br>"+Math.floor(finishSize*100/totalSize)+"% sorted.";
  
 document.getElementById("battleNumber").innerHTML = str;
  
@@ -563,7 +563,7 @@ document.getElementById("resultField").innerHTML = str;
  
 function showImage() {
  
-var str0 = "battle #"+numQuestion+"<br>"+Math.floor(finishSize*100/totalSize)+"% sorted.";
+var str0 = "Battle #"+numQuestion+"<br>"+Math.floor(finishSize*100/totalSize)+"% sorted.";
  
 var str1 = ""+toNameFace(lstMember[cmp1][head1]);
  
