--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@ var namMember = new Array(
  "Drip Drop",
 
  "Make it Count",
- 
+
+ "BREATH (TAKUMI, MASAYA, TAKERU, YUDAI, KYOSUKE)",
+
+ "Howlin' (RIHITO, FENGFAN, HIROMU, SHOGO, HIROTO, JIN)",
 );
  
  
