--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ var namMember = new Array(
 
  "BREATH (TAKUMI, MASAYA, TAKERU, YUDAI, KYOSUKE)",
 
- "Howlin' (RIHITO, FENGFAN, HIROMU, SHOGO, HIROTO, JIN)",
+ "Howlin＇ (RIHITO, FENGFAN, HIROMU, SHOGO, HIROTO, JIN)",
 );
  
  
